-expand all and collapse all logic -breadcrumb update **still bugged** logic needs to run AFTER ng-class updates the current class

--- a/FrontEnd/app/css/main.less
+++ b/FrontEnd/app/css/main.less
@@ -115,6 +115,11 @@ h4, .h4, h5, .h5, h6, .h6 {
   height: 5px;
 }
 
+.divider {
+  margin: 0 5px;
+  color: #cccccc;
+}
+
 //========================================
 //  top nav bar
 //========================================
@@ -147,7 +152,7 @@ header .navbar {
 }
 
 // when navbar item is selected
-.topnav .nav > li > a.current {
+.topnav .nav > li.current > a {
   color: #fff;
 }
 
@@ -237,9 +242,8 @@ header .nav {
 }
 
 .item-header {
-  background-color: rgb(255,240,240); 
+  background-color: #faf0f0; 
   padding: 5px 10px; 
-  border-bottom: 1px solid rgb(255,220,220);
   margin-top: 10px;
   margin-bottom: 5px;
 }
